[FEATURE] add-header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>London Trip</title>
 </head>
 <body>
-    
+    <header>
+
+        <h1>Il mio viaggio a Londra</h1>
+
+    </header>
 </body>
 </html>
