[feat]/add-content-images

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
         <h1>Il mio viaggio a Londra</h1>
 
     </header>
+
+    <body>
+
+        <div>
+
+            <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="Immagine di Londra la notte">
+            <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Immagine di Londra la notte">
+            <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Immagine di Londra la notte">
+            
+        </div>
+
+    </body>
 </body>
 </html>
