[feat]/add-travel-expenses-table

--- a/index.html
+++ b/index.html
@@ -22,6 +22,46 @@
             
         </div>
 
+
+        <div>
+            
+            <h2>Le mie spese</h2>
+
+            <table>
+
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120€</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120€</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120€</td>
+                </tr>
+
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360€</td>
+                </tr>
+
+            </table>
+        </div>
+
     </body>
 </body>
 </html>
