[feat]/added-to-do-list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
         <div>
-            
+
             <h2>Le mie spese</h2>
 
             <table>
@@ -60,6 +60,17 @@
                 </tr>
 
             </table>
+        </div>
+
+        <div>
+            <h2>Cose da fare</h2>
+
+            <ul>
+                <li>Visitare la tower of London &#x2717;</li>
+                <li>Visitare Greenwich &#x2713;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#x2713;</li>
+                <li>Mangiare il tipico fish and chips inglese &#x2717;</li>
+            </ul>
         </div>
 
     </body>
