[feat]/add-trip-info-list

--- a/index.html
+++ b/index.html
@@ -73,6 +73,35 @@
             </ul>
         </div>
 
+        <div>
+            <h2>Info utili:</h2>
+
+            <ol>
+                <li>Numeri utili di emergenza</li>
+                <li style="list-style-type: none;">
+                    <ul style="list-style-type:circle">
+                        <li><b>911</b> - Emergenza</li>
+                        <li><b>101</b> - Numero polizia</li>
+                        <li><b>111</b> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li value="2">Hotel</li>
+                <li style="list-style-type: none;">
+                    <ul style="list-style-type:circle">
+                        <li><b>Nome hotel:</b> Buckingam Palace</li>
+                        <li><b>Indirizzo hotel:</b> Westmister - London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li value="3">Aereo</li>
+                <li style="list-style-type: none;">
+                    <ul style="list-style-type:circle">
+                        <li><b>Volo di andata:</b> Y1234X, ore 9:30 da Milano Malpensa</li>
+                        <li><b>Volo di ritorno:</b> Y1236X ore 18:00 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+        </div>
+
     </body>
 </body>
 </html>
