--- a/index.html
+++ b/index.html
@@ -103,5 +103,14 @@
         </div>
 
     </body>
+
+    <footer>
+        <h2>Le foto</h2>
+
+        <div>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto del Millenium  bridge">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto notturna di Tower bridge">
+        </div>
+    </footer>
 </body>
 </html>
