[hotfix]/double-body-correction

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     </header>
 
-    <body>
+    <article>
 
         <div>
 
@@ -111,7 +111,7 @@
             <hr>
         </div>
 
-    </body>
+    </article>
 
     <footer>
         <h2>Le foto</h2>
